# dutree

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.sh
src/: lib.rs  main.rs
test/: link
test/dir1/test3/test2/test2/: file1
